--- a/experiments/templates/admin/experiments/experiment/change_form.html
+++ b/experiments/templates/admin/experiments/experiment/change_form.html
@@ -1,5 +1,7 @@
 {% extends "admin/change_form.html" %}
 {% load i18n %}
+{% load url from future %}
+
 {% block object-tools %}
     {% if change %}{% if not is_popup %}
         <ul class="object-tools">
