added missing jquery and removed unused jsi18n

--- a/experiments/templates/admin/experiments/experiment/results.html
+++ b/experiments/templates/admin/experiments/experiment/results.html
@@ -6,9 +6,9 @@
 {% load experiment_helpers %}
 
 {% block extrahead %}{{ block.super }}
-<script type="text/javascript" src="{% url 'admin:jsi18n' %}"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
+    google.load("jquery", "1.5.1");
     google.load('visualization', '1.0', {'packages':['corechart']});
 </script>
 <link rel="stylesheet" href="{{ STATIC_URL }}css/experiments.css">
