make session key a variable

--- a/example_project/templates/test_page.html
+++ b/example_project/templates/test_page.html
@@ -61,6 +61,6 @@
     <span onclick="experiments.goal('js_goal')">JS GOAL</span>
     <span data-experiments-goal="cookie_goal">COOKIE GOAL</span>
 
-    {% include "experiments/confirm_human.html" %}
+    {% experiments_confirm_human %}
 </body>
 </html>
