--- a/experiments/templates/admin/experiments/results_table.html
+++ b/experiments/templates/admin/experiments/results_table.html
@@ -12,13 +12,13 @@
             <th id="experiment-toggle-goals" class="experiment-toggle-goals" data-shown="false">Toggle All Goals</th>
             <th data-alternative="control"{% if user_alternative == 'control' %} class="experiment-selected-alternative"{% endif %}>
                 control <small>({{ control_participants|intcomma }})</small>
-                &dash; <span class="experiment-alternative-enrolled">Enrolled</span><span class="experiment-alternative-join">Join</span>
+                &dash; <span class="experiment-alternative-enrolled">Enrolled</span><span class="experiment-alternative-join">Click to join</span>
             </th>
             {% for alternative, participants in alternatives %}
                  {% if alternative != 'control' %}
                      <th colspan="3" data-alternative="{{ alternative }}"{% if user_alternative == alternative %} class="experiment-selected-alternative"{% endif %}>
                         {{ alternative }} <small>({{ participants|intcomma }})</small>
-                        &dash; <span class="experiment-alternative-enrolled">Enrolled</span><span class="experiment-alternative-join">Join</span>
+                        &dash; <span class="experiment-alternative-enrolled">Enrolled</span><span class="experiment-alternative-join">Click to join</span>
                      </th>
                  {% endif %}
             {% endfor %}
@@ -31,8 +31,7 @@
 
                 <td>
                     {% if data.mwu %}
-                        {# TODO: make not an a #}
-                        <a href="#" class="toggle_chart" data-element-id="{{ goal }}_chart">{{ goal }}</a>
+                        <span class="experiment-mwu-goal" data-chart-goal="{{ goal }}">{{ goal }}</span>
                     {% else %}
                         {{ goal }}
                     {% endif %}
@@ -57,33 +56,19 @@
                         <td title="Improvement">
                             {% with improvement=results.improvement confidence=results.confidence %}
                                 {% if improvement != None %}
-                                    {% if confidence >= 95 and improvement < 0 %}
-                                        <span style="color: #c00; font-weight: bold;">
-                                    {% elif confidence >= 95 and improvement > 0 %}
-                                        <span style="color: #0c0; font-weight: bold;">
-                                    {% else %}
-                                        <span>
-                                    {% endif %}
-                                    {{ improvement|floatformat:2 }} %</span>
+                                    <span class="{% if confidence >= 95 %}{% if improvement > 0 %}experiment-positive-improvement{% elif improvement < 0 %}experiment-negative-improvement{% endif %}{% endif %}">
+                                        {{ improvement|floatformat:2 }}&nbsp;%
+                                    </span>
                                 {% else %}
                                     N/A
                                 {% endif %}
                             {% endwith %}
                         </td>
                         <td title="Confidence Interval">
-                            {% with results.confidence as confidence %}
+                            {% with confidence=results.confidence %}
                                 {% if confidence != None %}
-                                    {% if confidence >= 95 %}
-                                        <span style="color: #0c0; font-weight: bold;">
-                                    {% endif %}
-                                    {% if confidence < 95 %}
-                                        <span style="color: #c00; font-weight: bold;">
-                                    {% endif %}
-                                    {% if confidence >= 99.995 %}
-                                        ~{{ confidence|floatformat:2 }} %
-                                    {% else %}
-                                        {{ confidence|floatformat:2 }} %
-                                    {% endif %}
+                                    <span class="{% if confidence >= 95 %}experiment-high-confidence{% else %}experiment-low-confidence{% endif %}">
+                                        {% if confidence >= 99.995 %}~{% endif %}{{ confidence|floatformat:2 }}&nbsp;%
                                     </span>
                                 {% else %}
                                     N/A
@@ -97,12 +82,10 @@
                 {% endfor %}
             </tr>
             {% if data.mwu %}
-                <tr style="display: none;">
+                <tr style="display: none;" id="{{ goal }}_mwu_row">
                     <td colspan="{{ column_count }}" >
-                        <div id="{{goal}}_chart" data-chart-key="{{goal}}" data-rendered="0"></div>
-                        <script>
-                            Experiments.EXPERIMENT_CHART_DATA['{{goal|escapejs}}'] = {{ data.mwu_histogram|safe }};
-                        </script>
+                        <div id="{{goal}}_chart"></div>
+                        <script>Experiments.EXPERIMENT_CHART_DATA['{{goal|escapejs}}'] = {{ data.mwu_histogram|safe }};</script>
                     </td>
                 </tr>
             {% endif %}
