--- a/example_project/templates/test_page.html
+++ b/example_project/templates/test_page.html
@@ -1,13 +1,15 @@
 {% load experiments %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Experiment Test Page</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
-    <script src="{% url 'nexus:media' 'experiments' 'js/jquery.cookie.js' %}"></script>
-    <script src="{% url 'nexus:media' 'experiments' 'js/experiments.js' %}"></script>
+    <script src="{% static "experiments/js/jquery.cookie.js" %}"></script>
+    <script src="{% static "experiments/js/experiments.js" %}"></script>
 
     <script>
+        {# Standard Django AJAX CSRF support #}
         jQuery(document).ajaxSend(function(event, xhr, settings) {
             function getCookie(name) {
                 var cookieValue = null;
@@ -57,6 +59,11 @@
     {% experiment helloworld test %}
         <a href="{% url 'goal' %}">Don't Click Me (test)</a>
     {% endexperiment %}
+
+    {% experiment_enroll "helloworld" "control" "test" as alternative %}
+    {% if alternative == "test" %}
+        You're in the "test" alternative!
+    {% endif %}
 
     <span onclick="experiments.goal('js_goal')">JS GOAL</span>
     <span data-experiments-goal="cookie_goal">COOKIE GOAL</span>
