--- a/experiments/templates/admin/experiments/change_form.html
+++ b/experiments/templates/admin/experiments/change_form.html
@@ -1,5 +1,19 @@
 {% extends "admin/change_form.html" %}
 
+{% block extrastyle %}{{ block.super }}
+    <style type="text/css">
+        .grp-object-tools a.experiment-state-toggle {
+            background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #4fb2d3),color-stop(100%, #309bbf));
+            background: -moz-linear-gradient(#4fb2d3,#309bbf);
+            background: -webkit-linear-gradient(#4fb2d3,#309bbf);
+            background: linear-gradient(#4fb2d3,#309bbf);
+        }
+        table.relevant-goals {
+            margin-bottom: 1em;
+        }
+    </style>
+{% endblock extrastyle %}
+
 {% block content_title %}{% if original %}<h1>{{ original.name }}</h1>{% else %}{{ block.super }}{% endif %}{% endblock %}
 
 {% block object-tools %}
@@ -15,11 +29,12 @@
 {% endblock object-tools %}
 
 {% block object-tools-items %}
+    {{ block.super }}
     {% if original %}
         {# These have to be links to get the correct admin styling #}
-        <li><a href="." data-set-state="0" class="{% if original.state == 0 %}experiment-state-selected{% endif %}">{% if experiment.default_alternative != control_group %}Default: {% endif %}{{ experiment.default_alternative }}</a></li>
-        <li><a href="." data-set-state="3" class="{% if original.state == 3 %}experiment-state-selected{% endif %}">Track</a></li>
-        <li><a href="." data-set-state="1" class="{% if original.state == 1 %}experiment-state-selected{% endif %}">Enabled</a></li>
+        <li><a href="." data-set-state="0" class="{% if original.state == 0 %}experiment-state-selected{% endif %} experiment-state-toggle">Default/Control</a></li>
+        <li><a href="." data-set-state="3" class="{% if original.state == 3 %}experiment-state-selected{% endif %} experiment-state-toggle">Track</a></li>
+        <li><a href="." data-set-state="1" class="{% if original.state == 1 %}experiment-state-selected{% endif %} experiment-state-toggle">Enabled</a></li>
     {% endif %}
 {% endblock object-tools-items %}
 
@@ -29,12 +44,12 @@
     </div>
 {% endblock field_sets %}
 
-{% block after_field_sets %}
+{% block after_related_objects %}
     <div>
         <fieldset class="module aligned collapse">
             <h2>Relevant Goals</h2>
 
-            <table>
+            <table class="relevant-goals">
                 <thead>
                     <tr>
                         <th>Goal</th>
@@ -54,4 +69,4 @@
             </table>
         </fieldset>
     </div>
-{% endblock after_field_sets %}
+{% endblock after_related_objects %}
